--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -1,6 +1,18 @@
 <div class="table-container">
-    <button [disabled]="this.selection.selected.length < 1" class="export-btn" mat-raised-button
-        (click)="exportAsXLSX()"><span class="material-icons">system_update_alt</span> Export to Excel</button>
+    <div class="export-filter-area">
+        <div>
+            <button [disabled]="this.selection.selected.length < 1" class="export-btn" mat-raised-button
+                (click)="exportAsXLSX()"><span class="material-icons">system_update_alt</span> Export to Excel</button>
+        </div>
+        <div class="filter-area">
+            <form class="example-form">
+                <mat-form-field>
+                    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search by body">
+                </mat-form-field>
+            </form>
+        </div>
+    </div>
+
     <div class="mat-elevation-z8">
         <table mat-table [dataSource]="dataSource" matSort>
 
@@ -57,8 +69,9 @@
                 <th mat-header-cell *matHeaderCellDef>
                 </th>
                 <td mat-cell *matCellDef="let row">
-                    <button class="delete-btn" mat-raised-button (click)="deletePost(row.id)"><span class="material-icons">
-                        delete</span></button>
+                    <button class="delete-btn" mat-raised-button (click)="deletePost(row.id)"><span
+                            class="material-icons">
+                            delete</span></button>
                 </td>
             </ng-container>
 
