--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -1,4 +1,5 @@
 <div class="table-container">
+    <div class="card-title">Dashboard</div>
     <div class="export-filter-area">
         <div>
             <button [disabled]="this.selection.selected.length < 1" class="export-btn" mat-raised-button
