--- a/src/app/features/dashboard/dashboard.component.scss
+++ b/src/app/features/dashboard/dashboard.component.scss
@@ -2,6 +2,12 @@ table {
   width: 100%;
 }
 
+.card-title {
+  font-size: 25px;
+  margin-bottom: 10px;
+  margin-top: 1em;
+}
+
 .export-filter-area {
   display: flex;
 
