--- a/src/app/features/post-detail/post-detail.component.scss
+++ b/src/app/features/post-detail/post-detail.component.scss
@@ -1,7 +1,7 @@
 .form-card {
-  margin: 2em auto;
-  width: 50em;
+  margin: 2em;
   margin-top: 5em;
+  display: flex;
   .card-title {
     font-size: 25px;
     margin-bottom: 1em;
@@ -14,6 +14,11 @@ mat-form-field {
 
 .mat-form-field-appearance-outline .mat-form-field-wrapper {
   padding-bottom: 0 !important;
+}
+
+.mat-card {
+  width: 25em;
+  margin-right: 2em;
 }
 
 textarea {
